# Blog_in-Django

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
crm/: forms.py  urls.py  views.py
myBlog/: asgi.py  settings.py  urls.py
posts/: admin.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_remove_post_slug.py  0004_post_slug.py  0005_alter_post_slug.py  0006_alter_post_slug.py
static/css/: mydjangocss.css
templates/: 404.html  contatti.html  email_template.html  layout.html  lista_post.html  post_singolo.html
templates/crm/: dashboard.html  my-login.html  register.html
virtual/: pyvenv.cfg
virtual/Scripts/: activate  activate.bat
