[tool.poetry]
name = "myblog"
version = "0.1.0"
description = "Test su myBlog Poetry"
authors = ["Danieldi25 <ddp251019@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
python-decouple = "^3.8"
django-extensions = "^3.2.3"
django-multi-captcha-admin = "^2.0.0"
django-simple-captcha = "^0.6.0"
django-captcha = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
